[project]
name = "lora-adapters-for-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.0",
    "pandas>=3.0.2",
    "setuptools<80",
    "swig>=4.4.1",
    "torch>=2.11.0",
    "tqdm>=4.66.3",
]

